@@ -24,11 +24,42 @@
 			</div>
 		</form>
 		<div class="clearfix"></div>
-		<form name="searchAndFilter">
-			<div class="form-group">
-				<f:form.textfield name="devlog-searchfield" placeholder="{f:translate(key:'search')}"
-								  id="tx_devlog_search"
-								  class="form-control t3js-devlog-searchfield"/>
+		<form name="search">
+			<div class="form-row">
+				<div class="form-group">
+					<f:form.textfield name="devlog-searchfield" placeholder="{f:translate(key:'search')}"
+									  id="tx_devlog_search"
+									  class="form-control t3js-devlog-searchfield"/>
+				</div>
+			</div>
+		</form>
+		<form name="filter" class="form-inline">
+			<div class="form-row">
+				<div class="form-group">
+					<label><f:translate id="severity" /></label>
+					<select id="tx_devlog_filter_severity"></select>
+				</div>
+				<div class="form-group">
+					<label><f:translate id="key" /></label>
+					<select id="tx_devlog_filter_key"></select>
+				</div>
+				<div class="form-group">
+					<label><f:translate id="ipAddress" /></label>
+					<select id="tx_devlog_filter_ip"></select>
+				</div>
+				<div class="form-group">
+					<label><f:translate id="page" /></label>
+					<select id="tx_devlog_filter_page"></select>
+				</div>
+				<div class="form-group">
+					<label><f:translate id="user" /></label>
+					<select id="tx_devlog_filter_user"></select>
+				</div>
+				<div class="form-group">
+					<button type="button" name="clearall" id="tx_devlog_clearall" class="btn btn-default">
+						<f:translate id="clear_filters" />
+					</button>
+				</div>
 			</div>
 		</form>
 		<table class="table table-striped table-hover" id="tx_devlog_list">
@@ -69,5 +100,9 @@
 	<!-- Loading mask -->
 	<div id="tx_devlog_list_loader">
 		<core:icon identifier="provider-fontawesome-spinner" size="default" />
+	</div>
+	<!-- No entries message -->
+	<div id="tx_devlog_list_empty" class="hidden">
+		<f:be.infobox message="{f:translate(id: 'no_entries')}" state="-1" />
 	</div>
 </html>
