@@ -1,3 +1,7 @@
+2016-09-04 Francois Suter <typo3@cobweb.ch>
+
+	* Restored column filters in new backend module, resolves #76971
+
 2016-07-09 Francois Suter <typo3@cobweb.ch>
 
 	* New backend module, resolves #76970
